Bug 415041 - Default calendar not set when creating new project
Summary: Default calendar not set when creating new project
Status: RESOLVED FIXED
Alias: None
Product: calligraplan
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.2.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dag Andersen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-11 07:35 UTC by Dag Andersen
Modified: 2020-01-07 07:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dag Andersen 2019-12-11 07:35:08 UTC
SUMMARY
Calendar is indicated as default, but it is not used by resources.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Dag Andersen 2019-12-11 07:39:45 UTC
Git commit ce5b90d2065dc0c42ff69b64185a853bd214509e by Dag Andersen.
Committed on 11/12/2019 at 07:36.
Pushed by danders into branch '3.2'.

Bug 415041 - Default calendar not set when creating new project
FIXED-IN: 3.2.2

M  +2    -4    src/kptmaindocument.cpp

https://commits.kde.org/calligraplan/ce5b90d2065dc0c42ff69b64185a853bd214509e
Comment 2 Dag Andersen 2020-01-07 07:32:02 UTC
Git commit ada65e95aa5502a0cfd5439540f8192f8ef62d80 by Dag Andersen.
Committed on 07/01/2020 at 07:27.
Pushed by danders into branch 'master'.

Bug 415041 - Default calendar not set when creating new project
FIXED-IN: 3.2.2
(cherry picked from commit ce5b90d2065dc0c42ff69b64185a853bd214509e)

M  +2    -4    src/kptmaindocument.cpp

https://commits.kde.org/calligraplan/ada65e95aa5502a0cfd5439540f8192f8ef62d80