Bug 415041 - Default calendar not set when creating new project

BUG: 415041
FIXED-IN: 3.2.2
(cherry picked from commit ce5b90d2065dc0c42ff69b64185a853bd214509e)